--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
+# Core Flask dependencies
 flask==3.0.0
 flask-cors==4.0.0
 python-dotenv==1.0.0
-langchain-community==0.0.13
+
+# LangChain core and community packages
+langchain-core>=0.1.0
+langchain-community>=0.0.13
+langchain>=0.1.0
+
+# LangGraph for advanced workflows
+langgraph>=0.0.40
+
+# LLM providers
+langchain-google-genai>=1.0.0
 langchain-deepseek==0.1.3
+langchain-groq>=0.1.0
+
+# Database connectivity
 psycopg2-binary==2.9.9
 sqlalchemy==2.0.25
+
+# Additional dependencies for enhanced features
+typing-extensions>=4.0.0
